# ms-rewards

./: .gitignore  Cargo.toml  README.md  hot_words.json  test.ps1
src/: bot.rs  hot_words.rs  main.rs  utils.rs
