[package]
name = "ms-rewards"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4"
